# website

./: .dockerignore  .editorconfig  .gitattributes  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  Dockerfile  README.md  compose.production.yaml  compose.yaml  mkdocs.yml  pyproject.toml  renovate.json5  zizmor.yml
.github/markdownlint/: .markdownlint-cli2.yaml  pre-commit.markdownlint-cli2.yaml
.github/redirects/: check_redirects.py  urls.json
.github/workflows/: cd.yml  check-redirects.yml  ci.yml
deploy/: sws.toml
docs/: imprint.md  index.md  privacy-policy.md  privacy_policy.md  tags.md
docs/assets/javascript/: extra.js  feedback.js
docs/assets/stylesheets/: extra.css
docs/assets/videos/: phd_defence_demo.mov
docs/blog/posts/2011/: hide-the-network-icon-from-windows-7-explorer.md  mac-os-airport-not-connecting-automatically-to-wi-fi.md  office-end-user-license-agreement-eula-has-to-be-accepted-every-time.md  setting-up-apache-and-subversion-on-debian-wheezy.md  things-discovered-in-struts-2.md
docs/blog/posts/2012/: hide-star-besides-email-addresses-in-thunderbird.md  how-to-use-ocl-when-running-emf-standalone.md  lyx-installing-unknown-document-classes.md  postgresql-accepts-any-or-no-password-when-connecting.md  (+2 more)
docs/projects/: index.md
docs/research/: index.md  overview.md  publications.md
docs/snippets/: archive.md
docs/stylesheets/: extra.css
ideas/: gitlab-cli-linting-markdown.md
layouts/: custom.yml
overrides/: robots.txt  sitemap.xml
overrides/partials/: actions.html  comments.html  content.html
(+40 files in other folders)
