[project]
name = "personal-website"
version = "0.1.0"
description = "Matthias Schoettle's personal website"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "markdown-callouts==0.4.0",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-glightbox==0.4.0",
    "mkdocs-material==9.6.23",
]

[tool.uv]
dev-dependencies = [
    "pre-commit==4.5.0",
]
