[project]
name = "personal-website"
version = "0.1.0"
description = "Matthias Schoettle's personal website"
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "markdown-callouts==0.4.0",
    "mkdocs-git-revision-date-localized-plugin==1.5.0",
    "mkdocs-glightbox==0.5.2",
    "mkdocs-material[imaging]==9.7.1",
]

[dependency-groups]
dev = [
    "prek==0.2.30",
]
